# cand-rs

./: .gitignore  Cargo.toml  devices.yaml  protocol.md
cand/: Cargo.toml  config.example.toml
cand-old/: Cargo.toml  config.toml
cand-old/src/: config.rs  main.rs  reactor.rs  util.rs
cand-old/src/backend/: mod.rs  socketcan.rs
cand-old/src/hook/: control.rs  mod.rs
cand-old/src/listen/: tcp.rs
cand/driver/: dimmer.lua
cand/src/: can.rs  config.rs  devices.rs  main.rs  reactor.rs  util.rs
cand/src/backend/: mod.rs  socketcan.rs
cand/src/can/: core.rs  encap.rs  legacy.rs  mod.rs
cand/src/driver/: lamp.rs  mod.rs
cand/src/hook/: control.rs  mod.rs
cand/src/listen/: tcp.rs
cand/src/net/: server.rs
lab-can-tcp-proto/: Cargo.toml
lab-can-tcp-proto/src/: lib.rs
lcp/: Cargo.toml
lcp-client/: Cargo.toml
lcp-client/src/: comm.rs  error.rs  lib.rs
lcp-proto/: Cargo.toml
lcp-proto/src/: error.rs  helper.rs  lib.rs  net.rs
lcp/src/: main.rs
src/: can.rs  main.rs  uart-host.rs
src/can/: can.rs  can_encap.rs  can_tcp.rs  encap.rs  mod.rs  uart.rs
