[package]
name = "cand"
version = "0.1.0"
authors = ["fridtjof <2780577+fridtjof@users.noreply.github.com>"]
edition = "2018"

[dependencies]
crc16 = "0.4"
tokio = {version = "0.2", features = ["net", "macros", "sync"]}
tokio-util = {version = "0.3", features = ["codec"]}
futures = "0.3"
tokio-serial = "~4.3"
bytes = "0.5"

lab-can-tcp-proto = { path = "../lab-can-tcp-proto" }