[package]
name = "cand"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
labctl = { path = "../../labctl", features = ["async"] }
slotmap = "1.0.6"
tokio = { version = "1.12.0", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "time", "sync"] }
futures = "0.3.17"
tokio-socketcan = "0.3.0"
anyhow = "1.0.44"
log = "0.4.11"
env_logger = "0.8.2"
semver = "1.0.4"
failure = "0.1.8"
hex = "0.4.3"
serde = { version = "1.0.117", features = ["derive"] }
clap = "2.33.1"
toml = "0.5.8"

[features]
default = ["hooks", "backend-net", "backend-socketcan"]
hooks = ["tokio/process"]
backend-net = []
backend-socketcan = []