[package]
name = "lab-can-tcp-proto"
version = "0.1.0"
authors = ["fridtjof <2780577+fridtjof@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
tokio-util = {version = "0.3", features = ["codec"]}

num = "0.2"
num-traits = "0.2"
num-derive = "0.2"