[package]
name = "lab-can-tcp-proto"
version = "0.1.0"
authors = ["fridtjof <fridtjof@das-labor.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
tokio-util = {version = "0.3", features = ["codec"]}