[package]
name = "lcp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
lcp-proto = { path = "../lcp-proto", features = ["async"]}
log = "0.4.17"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["net", "time", "sync"] }
