[package]
name = "lcp-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["tokio"]

[dependencies]
byteorder = "1.4.3"
ciborium = "0.2.0"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.0", optional = true, features = ["io-util"] }
